--- a/react-projekt/src/index.css
+++ b/react-projekt/src/index.css
@@ -10,9 +10,10 @@ body {
 }
 
 table{
-  width: 100%;
+  width: 80%;
   border-collapse: collapse;
   margin-top: 20px;
+  margin: 20px auto 0 auto;
 }
 
 th, td {
