--- a/react-projekt/src/components/MapView/mapview.css
+++ b/react-projekt/src/components/MapView/mapview.css
@@ -2,3 +2,10 @@
   height: 100%;
   width: 100%;
 }
+
+.flight-icon {
+  font-size: 40px;
+  color: rgb(0, 153, 255); 
+  text-align: center;
+  line-height: 1;
+}
