--- a/react-projekt/src/index.css
+++ b/react-projekt/src/index.css
@@ -4,6 +4,8 @@
 
 body {
   margin: 0;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 .App{
@@ -24,6 +26,6 @@ th, td {
 }
 
 th {
-  background-color: #f2f2f2;
-  color: black;
+  background-color: var(--header-background);
+  color: var(--header-text-color);
 }
